force-app/main/default/objects/Case/fields/Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Type__c</fullName>
    <label>Accommodation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Remote Work</fullName><default>false</default></value>
            <value><fullName>Flexible Hours</fullName><default>false</default></value>
            <value><fullName>Assistive Technology</fullName><default>false</default></value>
            <value><fullName>Modified Workspace</fullName><default>false</default></value>
            <value><fullName>Communication Aids</fullName><default>false</default></value>
            <value><fullName>Other</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>