force-app/main/default/objects/Case/fields/Functional_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Functional_Challenge__c</fullName>
    <label>Functional Challenge</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>