force-app/main/default/objects/Case/fields/Generated_Letter__c.field-meta.xml
<CustomField>
    <fullName>Generated_Letter__c</fullName>
    <label>Generated Advocacy Letter</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>