force-app/main/default/objects/Case/fields/Letter_Approved__c.field-meta.xml
<CustomField>
    <fullName>Letter_Approved__c</fullName>
    <label>Letter Approved by Employee</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>