force-app/main/default/objects/Case/fields/Plain_Language_Status__c.field-meta.xml
<CustomField>
    <fullName>Plain_Language_Status__c</fullName>
    <label>Plain Language Status</label>
    <type>Text</type>
    <length>255</length>
</CustomField>