force-app/main/default/objects/Case/recordTypes/Accommodation_Request.recordType-meta.xml
<RecordType>
    <fullName>Accommodation_Request</fullName>
    <active>true</active>
    <businessProcess>Accommodation_Process</businessProcess>
    <label>Accommodation Request</label>
</RecordType>